rke2-artifacts/minio-dev.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: minio-dev
  labels:
    name: minio-dev
---
apiVersion: v1
kind: Pod
metadata:
  labels:
    app: minio
  name: minio
  namespace: minio-dev
spec:
  containers:
  - name: minio
    image: minio
    args:
    - server
    - /mnt/disk1/data
    - --console-address
    - ":9090"
    volumeMounts:
    - mountPath: /mnt/disk1/data
      name: localvolume
    securityContext:
      runAsUser: 1000
      runAsGroup: 1000
  nodeSelector:
    kubernetes.io/hostname: kubealpha.local
  volumes:
  - name: localvolume
    hostPath:
      path: /mnt/disk1/data
      type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: minio-dev
spec:
  ports:
  - port: 9000
    targetPort: 9090
  selector:
    app: minio
