rke2-artifacts/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: homepage
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    name: nginx-homepage
